@@ -68,6 +68,7 @@ following names for their contribution to the product.
 * Juliano F. Ravasi
 * Lucas Garczewski
 * Louperivois
+* Manuel Menal
 * Marcin Cieślak
 * Marooned
 * Max Semenik
