@@ -111,6 +111,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   Mediawiki:Shared-repo-name-REPONAME, where REPONAME is the name in 
   $wgForeignFileRepos
 * Special:ListUsers: Sort list of usergroups by alphabet
+* (bug 16762) Special:Movepage now shows a list of subpages when possible
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
